--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,13 +12,17 @@
 
 :any-link, :any-link:visited {
   text-decoration: none;
-  letter-spacing: .75px;
-  font-size: .85rem;
+  letter-spacing: 1px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  font-size: 1rem;
+  font-weight: bold;
   color: white;
 }
 
 :any-link:hover { 
-  transition-duration: 400ms;
-  transform: scale(1.1);
-  color:rgb(60, 45, 105);
+  transition-duration: 2s;
+  transform: scale(1.075);
+  font-weight: bolder;
+  color:rgb(226, 44, 44);
 }
