--- a/src/styles/homePage.module.css
+++ b/src/styles/homePage.module.css
@@ -4,7 +4,7 @@
 
 .homepage {
   width: 50vw;
-  height: 50vh;
+  height: 100%;
   top: 1vh;
   left: 25%;
   right: 25%;
@@ -21,35 +21,47 @@
   background-color: rgb(125, 145, 165);
 }
 
+.usernav {
+  top: 0vh;
+  position: sticky;
+  display: flex;
+  justify-content: space-between;
+  margin: .55rem;
+  padding: .5rem;
+  border-radius: 3px;
+  box-shadow: 2px 2px 2px rgba(15, 15, 15, 0.5);
+  background-color:rgb(160, 175, 190);
+}
+
 .section {
-  cursor: pointer;
+  height: 100%;
   width: 100%;
-  height: 75%;
+  cursor: pointer;
   background-color:rgb(225, 240, 250);
 }
 
 .header {
   width: 50%;
-  top: 5%;
   left: 5%; 
+  top: 3vh;
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: column; 
+  padding-bottom: 3vh;
   font-size: 1.5rem;
   letter-spacing: 1px;
   color:rgb(60, 45, 105);
 }
 
-.usernav {
-  top: 0vh;
-  position: sticky;
+.homeimg {
   display: flex;
-  justify-content: space-evenly;
-  margin: 1vh;
-  padding: 5px;
-  border-radius: 3px;
-  box-shadow: 2px 2px 2px rgba(15, 15, 15, 0.5);
-  background-color:rgb(160, 175, 190);
+  position: relative;
+  box-shadow: -1px 1px 3px 2px rgba(15, 15, 15, 0.75);
+}
+
+.homeimg:hover {
+  transition-duration: 1s;
+  transform: scale(1.02);
 }
 
 .navroute {
@@ -57,9 +69,9 @@
   height: 3vh;
   position: sticky;
   display: flex;
-  justify-content: space-evenly;
-  margin: 1vh;
-  padding: 5px;
+  justify-content: space-around;
+  margin: .55rem;
+  padding: 1rem;
   border-radius: 3px;
   box-shadow: -2px -2px 2px rgba(15, 15, 15, 0.5);
   background-color:rgb(160, 175, 190);
