--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@
 }
 
 :root body {
-  background-color: rgb(215, 225, 255);
+  background-color:rgb(214, 231, 241);
 }
 
 :any-link, :any-link:visited {
@@ -18,12 +18,12 @@
   margin-right: 1rem;
   font-size: 1rem;
   font-weight: bold;
-  color: white;
+  color: rgb(240, 250, 255);
 }
 
 :any-link:hover { 
   transition-duration: 2s;
   transform: scale(1.1);
   font-weight: bold;
-  color:rgb(233, 45, 45);
+  color:rgba(35, 35, 85);
 }
