--- a/src/styles/homePage.module.css
+++ b/src/styles/homePage.module.css
@@ -76,3 +76,9 @@
   box-shadow: 2px 2px 2px rgba(35, 35, 85, 0.75);
   background-color:rgb(135, 170, 210);
 }
+
+.arrow {
+  position: relative;
+  top: 20%;
+  padding-left: 5px;
+}
