--- a/src/styles/homePage.module.css
+++ b/src/styles/homePage.module.css
@@ -69,7 +69,7 @@
   height: 3vh;
   position: sticky;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin: .55rem;
   padding: 1rem;
   border-radius: 3px;
@@ -78,7 +78,7 @@
 }
 
 .arrow {
-  position: relative;
   top: 20%;
+  position: relative;
   padding-left: 5px;
 }
